[package]
name = "ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = { version = "0.1.10", features = ["sync"] }
async-trait = "0.1.57"
rand = "0.8.5"
etherparse = "0.12.0"
rustyline = "10.0.0"
lazy_static = "1.4.0"

[[bin]]
name = "node"
path = "src/node_main.rs"
